FIX: span with color name and hex value now handles wrapping using CSS instead of a &nbsp; or \u2007 character

--- a/color-flipper/styles.css
+++ b/color-flipper/styles.css
@@ -43,6 +43,7 @@ h2 {
 
 h2 span {
     color: white;
+    white-space: nowrap;
 }
 
 .btn { 
